--- a/www/index.html
+++ b/www/index.html
@@ -2,19 +2,15 @@
     <head>
         <link rel="stylesheet" type="text/css" href="static/css/goradio.css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js">
-        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
         <script src="static/js/angular/angular-ui-router.min.js"></script>
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-resource.min.js">
-        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-resource.min.js"></script>
     </head>
     <body ng-app="goradio">
-        <ui-view>
-        </ui-view>
+        <ui-view></ui-view>
         <script src="static/js/goradio/app.js"></script>
         <script src="static/js/goradio/routes.js"></script>
-        <script src="static/js/goradio/login/LoginService.js"></script>
+        <script src="static/js/goradio/shared/UserService.js"></script>
         <script src="static/js/goradio/login/LoginController.js"></script>
         <script src="static/js/goradio/dashboard/DashboardController.js"></script>
     </body>
