--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
         <script src="static/js/goradio/routes.js"></script>
         <script src="static/js/goradio/shared/UserService.js"></script>
         <script src="static/js/goradio/login/LoginController.js"></script>
+        <script src="static/js/goradio/register/RegisterController.js"></script>
         <script src="static/js/goradio/dashboard/DashboardController.js"></script>
     </body>
 </html>
