--- a/www/index.html
+++ b/www/index.html
@@ -1,16 +1,67 @@
 <html>
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css"/>
         <link rel="stylesheet" type="text/css" href="static/css/goradio.css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.1/ui-bootstrap.min.js"></script>
         <script src="static/js/angular/angular-ui-router.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-resource.min.js"></script>
     </head>
-    <body ng-app="goradio">
+    <body ng-app="goradio" ng-controller="NavController as nav">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a ng-if="!nav.isLoggedIn()"
+                               class="glyphicon glyphicon-off right"
+                               ng-click="nav.showLogin()">
+                                Sign in/Up
+                            </a>
+                            <a ng-if="nav.isLoggedIn()"
+                               class="glyphicon glyphicon-off right"
+                               ng-click="nav.logOut()">
+                                Sign Out
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div id="wrapper" class="{{nav.open ? 'active' : ''}}">
+            <div id="sidebar-wrapper">
+                <ul id="sidebar_menu" class="sidebar-nav">
+                    <li class="sidebar-brand">
+                        <a id="menu-toggle" href="#" ng-click="nav.openSidebar()">
+                            Menu
+                            <span id="main_icon" class="glyphicon glyphicon-align-justify"></span>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="sidebar-nav" id="sidebar">
+                    <li>
+                        <a>
+                            Link1
+                            <span class="sub_icon glyphicon glyphicon-link"></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            link2
+                            <span class="sub_icon glyphicon glyphicon-link"></span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <ui-view></ui-view>
         <script src="static/js/goradio/app.js"></script>
         <script src="static/js/goradio/routes.js"></script>
         <script src="static/js/goradio/shared/UserService.js"></script>
+        <script src="static/js/goradio/shared/NavController.js"></script>
+        <script src="static/js/goradio/start/StartController.js"></script>
         <script src="static/js/goradio/login/LoginController.js"></script>
         <script src="static/js/goradio/register/RegisterController.js"></script>
         <script src="static/js/goradio/dashboard/DashboardController.js"></script>
