--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
     <body ng-app="goradio" ng-controller="NavController as nav">
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
-                <div id="navbar" class="navbar-collapse collapse">
+                <div id="navbar" class="navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
                             <a ng-if="!nav.isLoggedIn()"
@@ -34,7 +34,7 @@
             <div id="sidebar-wrapper">
                 <ul id="sidebar_menu" class="sidebar-nav">
                     <li class="sidebar-brand">
-                        <a id="menu-toggle" href="#" ng-click="nav.openSidebar()">
+                        <a id="menu-toggle" href="#" ng-click="nav.open = !nav.open">
                             Menu
                             <span id="main_icon" class="glyphicon glyphicon-align-justify"></span>
                         </a>
@@ -55,8 +55,8 @@
                     </li>
                 </ul>
             </div>
+            <ui-view></ui-view>
         </div>
-        <ui-view></ui-view>
         <script src="static/js/goradio/app.js"></script>
         <script src="static/js/goradio/routes.js"></script>
         <script src="static/js/goradio/shared/UserService.js"></script>
